--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
 <meta charset="utf-8">
 <title>元素クイズ</title>
-<link href="stylesheet.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>化学元素クイズ</h1>
 <hr>
 <h2>問題</h2>
 <div id="text_q"></div>
-<h2>選択</h2>
+<div class="disp-img2"></div>
+
+<h3>選択</h3>
 <div id="text_s"></div>
-<h2>解答</h2>
+<h4>解答</h4>
 <div id="text_a"></div>
+
 
 <script type="text/javascript">
 //問題と解答
@@ -23,13 +26,13 @@ qa = new Array();
             qa[2] = ["金属の中で最も軽い元素は","ヘリウム","炭素","リチウム",3];
             qa[3] = ["毒性の高い元素でアクアマリンなどの素材となる元素は","べリウム","炭素","窒素",1];
             qa[4] = ["ダイヤモンド、黒鉛等天然に存在する非金属元素は","窒素","ネオン","炭素",3];
-            qa[5] = ["空気中に最も多くあり、水に溶けにくい元素","窒素","ホウ素","さ",1];
+            qa[5] = ["空気中に最も多くあり、水に溶けにくい元素","窒素","ホウ素","炭素",1];
             qa[6] = ["地殻中に最も多く存在する、空気中でｎ番目に存在する非金属元素","フッ素","酸素","ネオン",2];
-            qa[7] = ["地殻中や蛍石などの鉱物に存在する、空気中でｎ番目に存在する非金属元素","フッ素","窒素","アルミニウム",1];
+            qa[7] = ["地殻中や蛍石などの鉱物に存在する、歯磨き粉の成分としても使われる","フッ素","窒素","アルミニウム",1];
             qa[8] = ["空気中に0.0018％存在する","ネオン","アルミニウム","窒素",1];
             qa[9] = ["ナイフで切れる柔らかい個体。石油中に保存する","ケイ素","アルミニウム","ナトリウム",3];
             qa[10] = ["岩石中に存在する金属元素、航空機や工具の原材料でもある","アルゴン","ケイ素","マグネシウム",3];
-            qa[11] = ["岩石中に存在する金属元素。航空機の部品などに使用される","マグネシウム","B","アルミニウム",3];
+            qa[11] = ["岩石中に存在する金属元素。航空機の部品などに使用される","マグネシウム","カリウム","アルミニウム",3];
             qa[12] = ["硬くてもろい代表的な半導体。ガラスの素材。","リン","カリウム","ケイ素",3];
             qa[13] = ["非常に燃えやすい元素。","リン","塩素","アルゴン",1];
             qa[14] = ["火山ガスや温泉水等に多く含まれる。ゴムの原料","カルシウム","硫黄","リン",2];
@@ -103,7 +106,6 @@ document.getElementById("text_q").innerHTML = s;
 //次の選択肢
 s = "【<a href='javascript:history.back()'>前のページに戻る</a>】";
 s += "【<a href='javascript:setReady()'>同じ問題を最初から</a>】";
-s += "【<a href=''>次の問題に進む</a>】";
 document.getElementById("text_s").innerHTML = s;
 }
 }
