--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ qa = new Array();
             qa[3] = ["毒性の高い元素でアクアマリンなどの素材となる元素は","べリウム","炭素","窒素",1];
             qa[4] = ["ダイヤモンド、黒鉛等天然に存在する非金属元素は","窒素","ネオン","炭素",3];
             qa[5] = ["空気中に最も多くあり、水に溶けにくい元素","窒素","ホウ素","炭素",1];
-            qa[6] = ["地殻中に最も多く存在する、空気中でｎ番目に存在する非金属元素","フッ素","酸素","ネオン",2];
+            qa[6] = ["地殻中に最も多く存在する、空気中で2番目に存在する非金属元素","フッ素","酸素","ネオン",2];
             qa[7] = ["地殻中や蛍石などの鉱物に存在する、歯磨き粉の成分としても使われる","フッ素","窒素","アルミニウム",1];
             qa[8] = ["空気中に0.0018％存在する","ネオン","アルミニウム","窒素",1];
             qa[9] = ["ナイフで切れる柔らかい個体。石油中に保存する","ケイ素","アルミニウム","ナトリウム",3];
