--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 //問題と解答
 qa = new Array();
             qa[0] = ["元素の中で最も軽く宇宙で最も多く存在する元素は","水素","ヘリウム","リチウム",1];
-            qa[1] = ["宇宙で２番目に多く存在し、パーティー用グッズとしても販売される元素は","ヘリウム","リチウム","べリウム",1];
+            qa[1] = ["宇宙で２番目に多く存在し、パーティー用グッズとしても販売される元素は","ヘリウム","リチウム","べリりリウム",1];
             qa[2] = ["金属の中で最も軽い元素は","ヘリウム","炭素","リチウム",3];
-            qa[3] = ["毒性の高い元素でアクアマリンなどの素材となる元素は","べリウム","炭素","窒素",1];
+            qa[3] = ["毒性の高い元素でアクアマリンなどの素材となる元素は","べリリウム","炭素","窒素",1];
             qa[4] = ["ダイヤモンド、黒鉛等天然に存在する非金属元素は","窒素","ネオン","炭素",3];
             qa[5] = ["空気中に最も多くあり、水に溶けにくい元素","窒素","ホウ素","炭素",1];
             qa[6] = ["地殻中に最も多く存在する、空気中で2番目に存在する非金属元素","フッ素","酸素","ネオン",2];
